update icon demo

--- a/index.html
+++ b/index.html
@@ -489,26 +489,35 @@
 
                   <ul hidden class="project-text" data-projects-text>
                     <div>
-                      <button
-                        onclick='redirectToTarget("https://blog.nhatnguyen.click")'
+                      <form
+                        action="https://blog.nhatnguyen.click"
+                        target="_blank"
                       >
-                        <ion-icon name="globe-outline"></ion-icon>
-                        <span>URL</span>
-                      </button>
+                        <button type="submit">
+                          <ion-icon name="globe-outline"></ion-icon>
+                          <span>URL</span>
+                        </button>
+                      </form>
 
-                      <button
-                        onclick='redirectToTarget("https://github.com/nhatnguyen7602/chanh-blog-fullstack.git")'
+                      <form
+                        action="https://github.com/nhatnguyen7602/chanh-blog-fullstack.git"
+                        target="_blank"
                       >
-                        <ion-icon name="logo-github"></ion-icon>
-                        <span>Github</span>
-                      </button>
+                        <button type="submit">
+                          <ion-icon name="logo-github"></ion-icon>
+                          <span>Github</span>
+                        </button>
+                      </form>
 
-                      <button
-                        onclick='redirectToTarget("https://youtu.be/Hg0DhgFDgFg")'
+                      <form
+                        action="https://youtu.be/Hg0DhgFDgFg"
+                        target="_blank"
                       >
-                        <ion-icon name="videocam-outline"></ion-icon>
-                        <span>Demo</span>
-                      </button>
+                        <button type="submit">
+                          <ion-icon name="videocam-outline"></ion-icon>
+                          <span>Demo</span>
+                        </button>
+                      </form>
                     </div>
 
                     <li>Responsibilities: Developer</li>
@@ -556,19 +565,25 @@
 
                   <ul hidden class="project-text" data-projects-text>
                     <div>
-                      <button
-                        onclick='redirectToTarget("https://meipaly-ui-three.vercel.app")'
+                      <form
+                        action="https://meipaly-ui-three.vercel.app"
+                        target="_blank"
                       >
-                        <ion-icon name="globe-outline"></ion-icon>
-                        <span>URL</span>
-                      </button>
+                        <button type="submit">
+                          <ion-icon name="globe-outline"></ion-icon>
+                          <span>URL</span>
+                        </button>
+                      </form>
 
-                      <button
-                        onclick='redirectToTarget("https://github.com/nhatnguyen7602/Meipaly_UI.git")'
+                      <form
+                        action="https://github.com/nhatnguyen7602/Meipaly_UI.git"
+                        target="_blank"
                       >
-                        <ion-icon name="logo-github"></ion-icon>
-                        <span>Github</span>
-                      </button>
+                        <button type="submit">
+                          <ion-icon name="logo-github"></ion-icon>
+                          <span>Github</span>
+                        </button>
+                      </form>
                     </div>
 
                     <li>Responsibilities: Developer</li>
@@ -609,19 +624,25 @@
 
                   <ul hidden class="project-text" data-projects-text>
                     <div>
-                      <button
-                        onclick='redirectToTarget("https://samar-ui.vercel.app")'
+                      <form
+                        action="https://samar-ui.vercel.app"
+                        target="_blank"
                       >
-                        <ion-icon name="globe-outline"></ion-icon>
-                        <span>URL</span>
-                      </button>
+                        <button type="submit">
+                          <ion-icon name="globe-outline"></ion-icon>
+                          <span>URL</span>
+                        </button>
+                      </form>
 
-                      <button
-                        onclick='redirectToTarget("https://github.com/nhatnguyen7602/Samar_UI.git")'
+                      <form
+                        action="https://github.com/nhatnguyen7602/Samar_UI.git"
+                        target="_blank"
                       >
-                        <ion-icon name="logo-github"></ion-icon>
-                        <span>Github</span>
-                      </button>
+                        <button type="submit">
+                          <ion-icon name="logo-github"></ion-icon>
+                          <span>Github</span>
+                        </button>
+                      </form>
                     </div>
 
                     <li>Responsibilities: Developer</li>
@@ -664,19 +685,25 @@
 
                   <ul hidden class="project-text" data-projects-text>
                     <div>
-                      <button
-                        onclick='redirectToTarget("https://github.com/nhatnguyen7602/Cyberflix_Movie.git")'
+                      <form
+                        action="https://github.com/nhatnguyen7602/Cyberflix_Movie.git"
+                        target="_blank"
                       >
-                        <ion-icon name="logo-github"></ion-icon>
-                        <span>Github</span>
-                      </button>
+                        <button type="submit">
+                          <ion-icon name="logo-github"></ion-icon>
+                          <span>Github</span>
+                        </button>
+                      </form>
 
-                      <button
-                        onclick='redirectToTarget("https://youtu.be/-eUxDNTiOTM")'
+                      <form
+                        action="https://youtu.be/-eUxDNTiOTM"
+                        target="_blank"
                       >
-                        <ion-icon name="videocam-outline"></ion-icon>
-                        <span>Demo</span>
-                      </button>
+                        <button type="submit">
+                          <ion-icon name="videocam-outline"></ion-icon>
+                          <span>Demo</span>
+                        </button>
+                      </form>
                     </div>
 
                     <li>Responsibilities: Developer</li>
@@ -721,19 +748,25 @@
 
                   <ul hidden class="project-text" data-projects-text>
                     <div>
-                      <button
-                        onclick='redirectToTarget("https://github.com/nhatnguyen7602/Clone_Fiverr_UI.git")'
+                      <form
+                        action="https://github.com/nhatnguyen7602/Clone_Fiverr_UI.git"
+                        target="_blank"
                       >
-                        <ion-icon name="logo-github"></ion-icon>
-                        <span>Github</span>
-                      </button>
+                        <button type="submit">
+                          <ion-icon name="logo-github"></ion-icon>
+                          <span>Github</span>
+                        </button>
+                      </form>
 
-                      <button
-                        onclick='redirectToTarget("https://drive.google.com/file/d/1aLIVjLhH_RxAzLyrFCGy_S76019NaGim/view?usp=sharing")'
+                      <form
+                        action="https://drive.google.com/file/d/1aLIVjLhH_RxAzLyrFCGy_S76019NaGim/view?usp=sharing"
+                        target="_blank"
                       >
-                        <ion-icon name="videocam-outline"></ion-icon>
-                        <span>Demo</span>
-                      </button>
+                        <button type="submit">
+                          <ion-icon name="videocam-outline"></ion-icon>
+                          <span>Demo</span>
+                        </button>
+                      </form>
                     </div>
 
                     <li>Responsibilities: Developer</li>
@@ -778,19 +811,25 @@
 
                   <ul hidden class="project-text" data-projects-text>
                     <div>
-                      <button
-                        onclick='redirectToTarget("https://github.com/nhatnguyen7602/Clone_Pinterest_API.git")'
+                      <form
+                        action="https://github.com/nhatnguyen7602/Clone_Pinterest_API.git"
+                        target="_blank"
                       >
-                        <ion-icon name="logo-github"></ion-icon>
-                        <span>Github</span>
-                      </button>
+                        <button type="submit">
+                          <ion-icon name="logo-github"></ion-icon>
+                          <span>Github</span>
+                        </button>
+                      </form>
 
-                      <button
-                        onclick='redirectToTarget("https://youtu.be/0fXBU4r0cQw")'
+                      <form
+                        action="https://youtu.be/0fXBU4r0cQw"
+                        target="_blank"
                       >
-                        <ion-icon name="videocam-outline"></ion-icon>
-                        <span>Demo</span>
-                      </button>
+                        <button type="submit">
+                          <ion-icon name="videocam-outline"></ion-icon>
+                          <span>Demo</span>
+                        </button>
+                      </form>
                     </div>
 
                     <li>Responsibilities: Developer</li>
@@ -831,19 +870,25 @@
 
                   <ul hidden class="project-text" data-projects-text>
                     <div>
-                      <button
-                        onclick='redirectToTarget("https://github.com/nhatnguyen7602/Clone_Fiverr_API.git")'
+                      <form
+                        action="https://github.com/nhatnguyen7602/Clone_Fiverr_API.git"
+                        target="_blank"
                       >
-                        <ion-icon name="logo-github"></ion-icon>
-                        <span>Github</span>
-                      </button>
+                        <button type="submit">
+                          <ion-icon name="logo-github"></ion-icon>
+                          <span>Github</span>
+                        </button>
+                      </form>
 
-                      <button
-                        onclick='redirectToTarget("https://youtu.be/tWjvUdnMSzE")'
+                      <form
+                        action="https://youtu.be/tWjvUdnMSzE"
+                        target="_blank"
                       >
-                        <ion-icon name="videocam-outline"></ion-icon>
-                        <span>Demo</span>
-                      </button>
+                        <button type="submit">
+                          <ion-icon name="videocam-outline"></ion-icon>
+                          <span>Demo</span>
+                        </button>
+                      </form>
                     </div>
 
                     <li>Responsibilities: Developer</li>
