--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                 <p class="contact-title">Email</p>
 
                 <a
-                  href="mailto:nhatnguyenbobo7600@gmail.com"
+                  href="mailto:nguyenminhnhat7602@gmail.com"
                   class="contact-link"
-                  >nhatnguyenbobo7600@gmail.com</a
+                  >nguyenminhnhat7602@gmail.com</a
                 >
               </div>
             </li>
@@ -111,7 +111,7 @@
 
           <div class="contact-item-cv">
             <a
-              href="./assets/files/CV_nguyenMinhNhat_Fullstack_Fresher.pdf"
+              href="./assets/files/CV_NguyenMinhNhat_Fullstack_Junior.pdf"
               class="icon-box-cv"
               download
             >
